--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,4 +9,4 @@ patreon: ferres # Replace with a single Patreon username
 # liberapay: # Replace with a single Liberapay username
 # issuehunt: # Replace with a single IssueHunt username
 # otechie: # Replace with a single Otechie username
-custom: ["https://nowpayments.io/donation/ferres"]
+# custom: [url1, url2]
