--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -31,9 +31,7 @@ jobs:
       run: |
         conda install --yes numpy mkl-service
         conda install --yes pytorch==${{ matrix.pytorch-version }} cpuonly -c pytorch
-        conda install --yes --file requirements-dev.txt
-        conda install --yes conda-build
-        conda develop .
+        pip install -e ."[dev]"
     - name: Run info
       shell: bash -l {0}
       run: |
