--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,5 +8,5 @@ python:
   install:
     - method: pip
       path: .
-    - method: pip
-      path: matplotlib
+    - extra_requirements:
+      - rtd
