Create .readthedocs.yml (#213)
* Create .readthedocs.yml

* Update .readthedocs.yml

* Update pyproject.toml

* Update pyproject.toml

* Update .readthedocs.yml

* Update .readthedocs.yml

* Update .readthedocs.yml

* move matplotlib to rtd dependencies

* Update .readthedocs.yml

* Update .readthedocs.yml

* Update .readthedocs.yml

* Update pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,10 +43,14 @@ dev = [
     "coveralls",
     "twine",
     "wheel",
-    "sphinx",
     "seaborn",
     "pydocstyle>=6.3.0",
-    "pylint"
+    "pylint",
+    "sphinx"
+]
+
+rtd = [
+    "matplotlib"
 ]
 
 [tool.pydocstyle]
