--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
-        pytorch-version: ['1.11.0', '1.13.0']
+        python-version: [3.9]
+        pytorch-version: ['2.0.1']
     env:
       PYTORCH_VERSION: ${{ matrix.pytorch-version }}
     steps:
