--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "geoopt"
 dynamic = ["version"]
 description = """Unofficial implementation for “Riemannian Adaptive Optimization Methods” ICLR2019 and more"""
 readme = "README.rst"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 authors = [
     {name = "Geoopt Developers", email = "maxim.v.kochurov@gmail.com"}
 ]
@@ -23,7 +23,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "torch>=1.11.0,!=1.12.*",
+    "torch>=2.0.1",
     "numpy",
     "scipy",
 ]
