--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,21 +80,7 @@ filterwarnings = [
 # avoid hangs.
 jobs = 1
 
-# Allow loading of arbitrary C extensions. Extensions are imported into the
-# active Python interpreter and may run arbitrary code.
-unsafe-load-any-extension = false
-
-# Allow optimization of some AST trees. This will activate a peephole AST
-# optimizer, which will apply various small optimizations. For instance, it can
-# be used to obtain the result of joining multiple strings with the addition
-# operator. Joining a lot of strings can lead to a maximum recursion error in
-# Pylint and this flag can prevent that. It has one side effect, the resulting
-# AST will be different than the one from reality.
-optimize-ast = false
-
 [tool.pylint.basic]
-# List of builtins function names that should not be used, separated by a comma
-bad-functions = ["map", "filter", "input"]
 
 # Good variable names which should always be accepted, separated by a comma
 good-names = ["i", "j", "k", "ex", "Run", "_"]
@@ -112,62 +98,32 @@ include-naming-hint = true
 # Regular expression matching correct method names
 method-rgx = "[a-z_][a-z0-9_]{2,30}$"
 
-# Naming hint for method names
-method-name-hint = "[a-z_][a-z0-9_]{2,30}$"
-
 # Regular expression matching correct function names
 function-rgx = "[a-z_][a-z0-9_]{2,30}$"
-
-# Naming hint for function names
-function-name-hint = "[a-z_][a-z0-9_]{2,30}$"
 
 # Regular expression matching correct module names
 module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
 
-# Naming hint for module names
-module-name-hint = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
-
 # Regular expression matching correct attribute names
 attr-rgx = "[a-z_][a-z0-9_]{2,30}$"
-
-# Naming hint for attribute names
-attr-name-hint = "[a-z_][a-z0-9_]{2,30}$"
 
 # Regular expression matching correct class attribute names
 class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$"
 
-# Naming hint for class attribute names
-class-attribute-name-hint = "([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$"
-
 # Regular expression matching correct constant names
 const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"
-
-# Naming hint for constant names
-const-name-hint = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"
 
 # Regular expression matching correct class names
 class-rgx = "[A-Z_][a-zA-Z0-9]+$"
 
-# Naming hint for class names
-class-name-hint = "[A-Z_][a-zA-Z0-9]+$"
-
 # Regular expression matching correct argument names
 argument-rgx = "[a-z_][a-z0-9_]{2,30}$"
-
-# Naming hint for argument names
-argument-name-hint = "[a-z_][a-z0-9_]{2,30}$"
 
 # Regular expression matching correct inline iteration names
 inlinevar-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
 
-# Naming hint for inline iteration names
-inlinevar-name-hint = "[A-Za-z_][A-Za-z0-9_]*$"
-
 # Regular expression matching correct variable names
 variable-rgx = "[a-z_][a-z0-9_]{2,30}$"
-
-# Naming hint for variable names
-variable-name-hint = "[a-z_][a-z0-9_]{2,30}$"
 
 # Regular expression which should only match function or class names that do
 # not require a docstring.
@@ -200,7 +156,6 @@ enable = ["import-self",
        "reimported",
        "wildcard-import",
        "misplaced-future",
-       "relative-import",
        "deprecated-module",
        "unpacking-non-sequence",
        "invalid-all-object",
@@ -209,8 +164,6 @@ enable = ["import-self",
        "cell-var-from-loop",
        "global-variable-undefined",
        "dangerous-default-value",
-       # "redefined-builtin",
-       "redefine-in-handler",
        "unused-import",
        "unused-wildcard-import",
        "global-variable-not-assigned",
@@ -220,7 +173,6 @@ enable = ["import-self",
        "bad-open-mode",
        "redundant-unittest-assert",
        "boolean-datetime",
-       # "unused-variable",
 ]
 
 [tool.pylint.reports]
@@ -230,11 +182,6 @@ enable = ["import-self",
 # as well as 'statement' which is the total number of statements analyzed. This
 # score is used by the global evaluation report (RP0004).
 evaluation = "10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)"
-
-# Put messages in a separate file for each module / package specified on the
-# command line instead of printing them on stdout. Reports (if any) will be
-# written in a file name "pylint_global.[txt|html]".
-files-output = false
 
 # Set the output format. Available formats are text, parseable, colorized, json
 # and msvs (visual studio). You can also give a reporter class, e.g.
@@ -270,12 +217,6 @@ max-module-lines = 1000
 
 # Allow the body of an if to be on the same line as the test if there is no else.
 single-line-if-stmt = false
-
-# List of optional constructs for which whitespace checking is disabled. `dict-
-# separator` is used to allow tabulation in dicts, etc.: {1  : 1,\n222: 2}.
-# `trailing-comma` allows a space between comma and closing bracket: (a, ).
-# `empty-line` allows space-only lines.
-no-space-check=["trailing-comma", "dict-separator"]
 
 [tool.pylint.logging]
 # Logging modules to check that the string format arguments are in logging
@@ -421,4 +362,4 @@ deprecated-modules = ["optparse"]
 
 [tool.pylint.exceptions]
 # Exceptions that will emit a warning when caught.
-overgeneral-exceptions = ["Exception"]
+overgeneral-exceptions = ["builtins.Exception"]
